fixed horizontal scroll due to h1 padding

--- a/ncjm/ncjm_site/static/css/main.css
+++ b/ncjm/ncjm_site/static/css/main.css
@@ -73,7 +73,7 @@ main {
 
 h1 {
 	width: 100%;
-	padding: 8px 16px;
+	padding: 8px 0 8px 16px;
 	font-size: 24px;
 	margin: 0;
 	background-color: black;
